<resources>
    <string name="app_name">Student</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="zero_sur_cent">0/100</string>
    <string name="comment">Comment</string>
    <string name="change_school">Change school</string>
    <string name="publish">PUBLISH</string>
    <string name="disconnect">Disconnect</string>
    <string name="create_publication">Create a publication </string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="change_password">Change password</string>
    <string name="email_exist">Email already exist</string>
    <string name="login">Login</string>
    <string name="content_not_found">Content not found</string>
    <string name="http_no_connection">Check your internet connection</string>
    <string name="request_error">An error occurred during your request</string>
    <string name="technical_error">An unknow error happened : Try again</string>
    <string name="email">Email : </string>
    <string name="password">Password : </string>
    <string name="birthday">Birthday : </string>
    <string name="no_account_yet">No account yet ?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password :</string>
    <string name="school">School :</string>
    <string name="option">Option :</string>
    <string name="back">Back</string>
    <string name="bloc">Bloc :</string>
    <string name="lastname">Last name :</string>
    <string name="firstname">First name :</string>
    <string name="error">Error</string>
    <string name="error_empty_email">Empty email field</string>
    <string name="error_email_format">Unvalid email</string>
    <string name="error_empty_password">Empty password field</string>
    <string name="error_password_no_match">Passwords does not match each other</string>
    <string name="error_reconnect">An error occurred, please reconnect !</string>
    <string name="not_actual_password">Wrong old password</string>
    <string name="password_changed">Password changed successfully !</string>
    <string name="retry">Retry</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="too_small_password">Password must be >5 characters</string>
    <string name="invalid_password">Password isn\'t correct !</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="old_password">Old password : </string>
    <string name="changing_same_password">You are trying to change your password for the same one</string>
    <string name="press_secondTime">Press again to quit</string>
    <string name="comments">Comments</string>
    <string name="soon">Soon...</string>
</resources>