<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.main.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/settings_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_back_dark"
            android:contentDescription="@string/back"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/settings_changePassword_button"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/change_password"
            android:textColor="#FFF"
            android:textSize="12sp"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/settings_changeSchool_button"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/change_school"
            android:textColor="#FFF"
            android:textSize="12sp"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/settings_disconnect_button"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/disconnect"
            android:textColor="#FFF"
            android:textSize="12sp"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</LinearLayout>