<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.main.ChangePasswordFragment">

    <LinearLayout
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/change_password_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_back_dark"
            android:contentDescription="@string/back"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/change_password"
            android:textColor="#000"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/change_password_old_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="50dp"
        />
    <EditText
        android:id="@+id/change_password_old_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:maxLines="1"
        />
    <TextView
        android:id="@+id/change_password_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/colorAccent"
        />
    <EditText
        android:id="@+id/change_password_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:maxLines="1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/colorAccent"
        />
    <EditText
        android:id="@+id/change_password_confirm_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:maxLines="1"
        />

    <Button
        android:id="@+id/change_password_change_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/login_button_bg"
        android:text="@string/change_password"
        android:textColor="#fff" />

</LinearLayout>