<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.connection.LoginFragment">

    <TextView
        android:id="@+id/login_title_text"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:textAlignment="center"
        android:textColor="#fff"
        android:background="@drawable/bg_app"
        android:paddingVertical="55dp"
        android:textSize="35sp"
        android:fontFamily="cursive"
        android:layout_marginBottom="25dp"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/login_email_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/colorAccent"
        />
    <EditText
        android:id="@+id/login_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:maxLines="1"
        />
    <TextView
        android:id="@+id/login_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/colorAccent"
        />
    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:maxLines="1"
        />
    <Button
        android:id="@+id/loginLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#fff"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/login_button_bg"
        />
    <TextView
        android:id="@+id/login_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_account_yet"
        android:layout_marginVertical="40dp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@color/colorAccent"
        android:onClick="onClick"
        android:clickable="true"
        android:focusable="true"
        />
</LinearLayout>