<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Penser à rajouter le bloc -->
    <TextView
        android:id="@+id/login_form_header"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:textAlignment="center"
        android:textColor="#fff"
        android:background="@drawable/bg_app"
        android:paddingVertical="55dp"
        android:textSize="35sp"
        android:fontFamily="cursive"
        android:layout_marginBottom="25dp"
        android:text="@string/register"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/login_form_email_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginHorizontal="30dp"
            android:textColor="@color/colorAccent"
            />
        <EditText
            android:id="@+id/login_form_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:maxLines="1"
            />
        <TextView
            android:id="@+id/login_form_password_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginHorizontal="30dp"
            android:textColor="@color/colorAccent"
            />
        <EditText
            android:id="@+id/login_form_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:maxLines="1"
            />
        <TextView
            android:id="@+id/login_form_confirm_password_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:layout_marginHorizontal="30dp"
            android:textColor="@color/colorAccent"
            />
        <EditText
            android:id="@+id/login_form_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:maxLines="1"
            />
        <TextView
            android:id="@+id/login_form_birthday_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:layout_marginHorizontal="30dp"
            android:textColor="@color/colorAccent"
            />
        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:calendarTextColor="#fff"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            />
        <TextView
            android:id="@+id/login_form_school_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginHorizontal="30dp"
            android:textColor="@color/colorAccent"
            />
        <Spinner
            android:id="@+id/schools_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/login_form_option_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginHorizontal="30dp"
            android:textColor="@color/colorAccent"
            />
        <Spinner
            android:id="@+id/options_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/login_form_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#fff"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/login_button_bg"
            />
    </ScrollView>


</LinearLayout>