<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.main.CommentsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/comments_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_back_dark"
            android:contentDescription="@string/back"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/comments"
            android:textColor="#000"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="6dp"
        android:layout_marginHorizontal="8dp">

        <EditText
            android:id="@+id/comments_content_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:paddingHorizontal="6dp"
            android:paddingVertical="3dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/layout_comment_content"/>

        <Button
            android:id="@+id/comments_publish_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/publish"
            android:textColor="#FFF"
            android:textSize="12sp"
            android:background="@drawable/rounded_button"
            android:enabled="false"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>